# fritz-os

./: .gitignore  Cargo.toml  README.md  x86_64-fritz_os.json
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  paging.rs  serial.rs  vga_buffer.rs
src/vga_buffer/: codepage437.rs  mod.rs
