[package]
name = "fritz_os"
version = "0.1.0"
authors = ["Fritz Psiorz <fpz@posteo.de>"]

[dependencies]
rlibc = "1.0"
volatile = "0.2.3"
spin = "0.4.6"
bootloader = "0.3.4"
array-init = "0.0.3"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
