[package]
name = "fritz_os"
version = "0.1.0"
authors = ["Fritz Psiorz <fpz@posteo.de>"]

[dependencies]
uart_16550 = "0.1.0"
rlibc = "1.0"
volatile = "0.2.3"
bootloader = "0.3.4"
array-init = "0.0.3"
x86_64 = "0.5.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
interrupt-lock = { git = "https://github.com/fpsiorz/interrupt-lock"}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-fritz_os.json"
